<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/arrow"
        android:contentDescription="@string/back"
        android:layout_gravity="start"
        android:backgroundTint="@color/background"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"/>

    <ImageView
        android:id="@+id/imageDetail"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:background="@drawable/button_border"
        android:elevation="20dp"
        android:padding="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:contentDescription="@string/result_image"/>

    <TextView
        android:id="@+id/level_name_detail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/result_name"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/orange"
        android:textSize="30sp"/>

    <!--   description label     -->
    <TextView
        android:id="@+id/details_desc_label"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/desc"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/dark_brown"
        android:textSize="20sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        tools:ignore="UselessParent"
        android:background="@drawable/button_border"
        android:backgroundTint="@null"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent"
            android:backgroundTint="@null"
            android:orientation="vertical">

            <!--   description content    -->
            <TextView
                android:id="@+id/details_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:fontFamily="@font/poppins"
                android:textColor="@color/orange"
                android:textSize="15sp"/>

            <!-- Flavor Label -->
            <TextView
                android:id="@+id/details_flavor_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flavor"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:layout_marginTop="24dp"/>

            <!-- Flavor Content -->
            <TextView
                android:id="@+id/details_flavor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flavor"
                android:fontFamily="@font/poppins"
                android:textColor="@color/orange"
                android:textSize="15sp"
                android:layout_marginStart="20dp"/>

            <!-- Recommendation Label -->
            <TextView
                android:id="@+id/details_reco_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reco"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:layout_marginTop="24dp"/>

            <!-- Recommendation Content -->
            <TextView
                android:id="@+id/details_reco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reco"
                android:fontFamily="@font/poppins"
                android:textColor="@color/orange"
                android:textSize="15sp"
                android:layout_marginStart="20dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>