<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/background"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo_no_background"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/app_name"
                android:gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/orange"
                android:textSize="30sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="450dp"
            android:layout_marginBottom="277dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            android:layout_marginHorizontal="40dp">

            <Button
                android:id="@+id/scanCacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:text="@string/scan_cacao"
                android:textColor="@color/dark_brown"
                android:backgroundTint="@null"
                android:fontFamily="@font/poppins"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <Button
                android:id="@+id/scanFromGalleryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@null"
                android:background="@drawable/button_border"
                android:text="@string/browse_gallery"
                android:textColor="@color/dark_brown"
                android:fontFamily="@font/poppins"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
